feat (general) : full version 5 (client-server migration) updated